--- a/app/views/pages/login.ejs
+++ b/app/views/pages/login.ejs
@@ -3,23 +3,24 @@
 
 <head>
    <meta charset="UTF-8">
-   <title>AMAMI <3 </title>
+   <title>AMAMI</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-            crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
 
-         <link rel="stylesheet" href="/styles/app.css">
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
+   <link rel="stylesheet" href="/styles/app.css">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 
    <main role="main" class="container">
       <div class="row d-flex justify-content-center text-center">
-         <div class="col-6" style="margin:auto;">
+         <div class="col-lg-4 col-md-6 col-sm-12 mt-5">
             <div class="card bg-light">
                <div class="card-body">
                   <h2>Login</h2>
@@ -41,9 +42,11 @@
                         <label for="password">Password</label>
                         <input type="password" name="password" class="form-control" id="password">
                      </div>
+                     <% if(errors){ %>
                      <% errors.forEach(function(error){ %>
-                        <%- include('../partials/errorBadge',[{error: error}]); %>
+                     <%- include('../partials/errorBadge',{error: error}); %>
                      <% }); %>
+                     <% } %>
                      <button type="submit" class="btn bg-pink">submit</button>
                   </form>
                </div>
