--- a/app/public/styles/app.css
+++ b/app/public/styles/app.css
@@ -13,3 +13,22 @@
 #usermap {
    height: 180px;
 }
+
+*::-webkit-scrollbar {
+   width: 10px;
+   z-index: 100;
+}
+
+*::-webkit-scrollbar-track-piece {
+   background-color: #ffffff00;
+}
+
+*::-webkit-scrollbar-thumb {
+   background-color: #999999a9;
+   border-radius: 10px;
+   
+}
+
+*::-webkit-scrollbar-thumb:hover {
+   background-color: #999999d9;
+}
