--- a/app/views/partials/navbar.ejs
+++ b/app/views/partials/navbar.ejs
@@ -1,22 +1,33 @@
 <header>
+   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
    <nav class="navbar navbar-light bg-light">
-      <a href="/" class="navbar-brand mb-0 h1">
-         <% if (user) { %>
-         <%= user.nome %> <%= user.cognome %>
-         <% } else { %>
-         <span>Benvenuto</span>
-         <% } %>
-         
-         <% if (user && user.sesso == "maschio") { %>
+      <button class="btn bg-light ">
+         <a href="/profile" class="navbar-brand mb-0 h1">
+            <% if (user) { %>
+            <%= user.nome %> <%= user.cognome %>
+            <% } else { %>
+            <span>Benvenuto</span>
+            <% } %>
+
+            <% if (user && user.sesso == "maschio") { %>
             <i class="fas fa-heart" style="color:cyan"></i>
             <% } else { %>
             <i class="fas fa-heart" style="color:pink"></i>
             <% } %>
          </a>
-          
+      </button>
+
+      <button class="btn bg-light ">
+         <a href="/" class="navbar-brand" style="font-family: 'Great Vibes', cursive;font-size: 2rem;">
+            Cerca la tua anima gemella
+         </a>
+      </button>
+
+
       <% if (user) { %>
-      <a href="/login" class="navbar-brand mb-0 h1"> <button class="btn bg-light">logout 
-         <i class="fas fa-sign-out-alt"style="color:pink"></i></button></a>
+      <a href="/login" class="navbar-brand mb-0 h1"> <button class="btn bg-light">logout
+            <i class="fas fa-sign-out-alt" style="color:pink"></i></button></a>
       <% } %>
    </nav>
 </header>
