--- a/app/views/pages/login.ejs
+++ b/app/views/pages/login.ejs
@@ -9,9 +9,7 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
       crossorigin="anonymous"></script>
@@ -28,14 +26,16 @@
 
    <main role="main" class="container">
       <div class="row d-flex justify-content-center text-center">
-         <div class="col-lg-4 col-md-6 col-sm-12 mt-5">
+         <div class="col-lg-4 col-md-6 col-sm-12  m-5">
             <div class="card bg-light">
                <div class="card-body">
                   <h2>Login</h2>
                   <hr>
+                  - oppure <a href="/register"> registrati </a> -
+                  <hr>
                   <form method="POST">
                      <div class="form-group">
-                        <label for="email">Email address</label>
+                        <label for="email">Email</label>
                         <input type="email" name="email" class="form-control" id="email">
                      </div>
                      <div class="form-group">
