--- a/app/views/partials/errorBadge.ejs
+++ b/app/views/partials/errorBadge.ejs
@@ -1,3 +1,3 @@
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-danger alert-error-app" role="alert">
    <b><%= error.param %> </b> | <%= error.msg %>
 </div>
