--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -3,3 +3,16 @@
       <span class="text-muted ">Trovare l'anima gemella non è mai stato cosi semplice...</span>
    </div>
 </footer>
+
+<script>
+   if ($(".alert-error-app").length) {
+      for (let el of $(".alert-error-app")) {
+         $(el).fadeTo(4000, 500).slideUp(500, function () {
+            $(el).slideUp(500);
+         });
+         $(el).click(function () {
+            $(el).remove();
+         })
+      }
+   }
+</script>
