--- a/app/views/pages/profile.ejs
+++ b/app/views/pages/profile.ejs
@@ -10,7 +10,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-   
+
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
       crossorigin="anonymous"></script>
@@ -58,6 +58,24 @@
                <div class="col-lg-4 col-md-6 col-sm-12 text-center mt-3">
                   <b>Indirizzo</b> : <%= user.comune %>(<%= user.provincia %>), <%= user.regione %>
                </div>
+               <div class="col-12">
+                  <hr>
+               </div>
+               <div class=" col-lg-6 col-md-12 col-sm-12 text-center mt-3 form-group row">
+                  <div class="col-sm-2"><b>Cerco</b></div>
+                  <div class="col-sm-10">
+                     <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input"  id="checkSessoMaschio" <% if (user.interesse_aggregato && user.interesse_aggregato.includes('maschio')) { %> checked <% } %> >
+                     <label class="custom-control-label" for="checkSessoMaschio" >Maschio</label>
+                     </div>
+                     <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="checkSessoFemmina" <% if (user.interesse_aggregato &&  user.interesse_aggregato.includes('femmina')) { %> checked <% } %> >
+                        <label class="custom-control-label" for="checkSessoFemmina" >Femmina</label>
+                     </div>
+                  </div>
+
+
+               </div>
             </div>
             <hr>
             <div id="usermap" style="height: 400px;"></div>
@@ -83,6 +101,17 @@
                      data => data.success ? window.location.reload() : null
                   ))
          }
+
+         const updateInteresse = () => {
+            fetch('/api/sesso/interesse',
+               {
+                  method: 'POST',
+                  headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ sesso_maschio: $('#checkSessoMaschio').prop('checked'), sesso_femmina: $('#checkSessoFemmina').prop('checked') })
+               })
+         }
+         $('#checkSessoMaschio').on('click', updateInteresse)
+         $('#checkSessoFemmina').on('click', updateInteresse)
       </script>
 
       <% if (user) { %>
