--- a/app/views/pages/profile.ejs
+++ b/app/views/pages/profile.ejs
@@ -65,11 +65,11 @@
                   <div class="col-sm-2"><b>Cerco</b></div>
                   <div class="col-sm-10">
                      <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input"  id="checkSessoMaschio" <% if (user.interesse_aggregato && user.interesse_aggregato.includes('maschio')) { %> checked <% } %> >
+                        <input type="checkbox" class="custom-control-input"  id="checkSessoMaschio" <% if (user.orientamento_aggregato && user.orientamento_aggregato.includes('maschio')) { %> checked <% } %> >
                      <label class="custom-control-label" for="checkSessoMaschio" >Maschio</label>
                      </div>
                      <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="checkSessoFemmina" <% if (user.interesse_aggregato &&  user.interesse_aggregato.includes('femmina')) { %> checked <% } %> >
+                        <input type="checkbox" class="custom-control-input" id="checkSessoFemmina" <% if (user.orientamento_aggregato &&  user.orientamento_aggregato.includes('femmina')) { %> checked <% } %> >
                         <label class="custom-control-label" for="checkSessoFemmina" >Femmina</label>
                      </div>
                   </div>
@@ -102,8 +102,8 @@
                   ))
          }
 
-         const updateInteresse = () => {
-            fetch('/api/sesso/interesse',
+         const updateorientamento = () => {
+            fetch('/api/sesso/orientamento',
                {
                   method: 'POST',
                   headers: { 'Content-Type': 'application/json' },
@@ -112,8 +112,8 @@
                   res => document.cookie = res.headers['Set-Cookie']
                )
          }
-         $('#checkSessoMaschio').on('click', updateInteresse)
-         $('#checkSessoFemmina').on('click', updateInteresse)
+         $('#checkSessoMaschio').on('click', updateorientamento)
+         $('#checkSessoFemmina').on('click', updateorientamento)
       </script>
 
       <% if (user) { %>
